Tue Feb 23 11:54:21 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * MPC/config/dds4ccm_impl.mpb:
        * MPC/config/dds4ccm_logger.mpb:
        * connectors/dds4ccm/impl/logger:
        * connectors/dds4ccm/impl/logger/Log_Macros.h:
        * connectors/dds4ccm/impl/logger/Log_Macros.cpp:
        * connectors/dds4ccm/impl/logger/Logger.mpc:
        * connectors/dds4ccm/impl/ndds/ContentFilteredTopic.cpp:
        * connectors/dds4ccm/impl/ndds/DDSCallbackStatusHandler.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Base_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Event_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Get_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Listen_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Read_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_StateListen_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_State_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_TopicBase_Connector_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Update_T.cpp:
        * connectors/dds4ccm/impl/ndds/DDS_Write_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataListenerControl_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReader.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderHandler_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderListener.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataReaderStateListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriter.cpp:
        * connectors/dds4ccm/impl/ndds/DataWriterListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantFactory.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantListener.cpp:
        * connectors/dds4ccm/impl/ndds/DomainParticipantListener_T.cpp:
        * connectors/dds4ccm/impl/ndds/Getter_T.cpp:
        * connectors/dds4ccm/impl/ndds/InstanceHandleManager_T.cpp: