@@ -2,4 +2,7 @@
 
 #include "Log_Macros.h"
 
-CIAO_Logger_Export unsigned int CIAO_debug_level = 0;
+// For now, DDS4CCM is making use of the CIAO logging framework.
+// This file is there in preparation of the DDS4CCM logging framework.
+// For now, this should be empty because the CIAO_debug_level flag is
+// set in the Log_Macros.cpp of the CIAO logging framework.
